HBASE-29958 Improve log messages (#7922)
* HBASE-29958 Improve log messages

* Address review comments

* Update hbase-server/src/main/java/org/apache/hadoop/hbase/util/FSUtils.java

Co-authored-by: Kota-SH <shanmukhaharipriya@gmail.com>

* Update hbase-server/src/main/java/org/apache/hadoop/hbase/util/FSUtils.java

Co-authored-by: Kota-SH <shanmukhaharipriya@gmail.com>

* Update hbase-server/src/main/java/org/apache/hadoop/hbase/master/MasterFileSystem.java

Co-authored-by: Kota-SH <shanmukhaharipriya@gmail.com>

* HBASE-29961 Secondary cluster is unable to replayWAL for meta (#7854)

* Add <blank> when no suffix provided

* Address few review comments

* HBASE-29958. Refactor ActiveClusterSuffix to use protobuf, refactor logging

* HBASE-29958. Remove more redundant logic, test cleanup

* HBASE-29958. Spotless apply

* HBASE-29958. Revert mistake

* HBASE-29958 Improve log messages

* Address Kevin's review comment to address multiple : in active cluster suffix

* As getClusterSuffixFromConfig() changed we need to change the code for file deletion

* Use ActiveClusterSuffix object based comparison instead of byte Array comparison

---------

Co-authored-by: Kota-SH <shanmukhaharipriya@gmail.com>
Co-authored-by: Andor Molnar <andor@cloudera.com>